@@ -1774,7 +1774,7 @@
             "name": "Gunpowder Light",
             "palette_coordinates": {
                 "category": "Other Materials",
-                "sub_category": "Gunpowder Light",
+                "sub_category": "Gunpowder",
                 "sub_category_ordinal": 0
             },
             "render_color": "#2E1E1E",
@@ -1808,8 +1808,8 @@
             "name": "Gunpowder Strong",
             "palette_coordinates": {
                 "category": "Other Materials",
-                "sub_category": "Gunpowder Strong",
-                "sub_category_ordinal": 0
+                "sub_category": "Gunpowder",
+                "sub_category_ordinal": 1
             },
             "render_color": "#2F1F1F",
             "sound_type": "Rubber",
@@ -1822,6 +1822,75 @@
             "water_retention": 0.05,
             "wind_receptivity": 0.1
         },
+        {
+            "buoyancy_volume_fill": 1.0,
+            "color_key": "#F1F5C1",
+            "combustion_type": "Explosion",
+            "elasticity_coefficient": 0.5,
+	    "explodes_on_break": true,
+            "explosive_combustion_force": 2000.0,
+            "explosive_combustion_force_radius": 3.0,
+	    "explosive_combustion_heat": 100000.0,
+            "friction_kinetic_coefficient": 0.69,
+            "friction_static_coefficient": 1.25,
+            "ignition_temperature": 693.15,
+            "is_hull": false,
+            "mass": {
+                "density": 0.8,
+                "nominal_mass": 801.0
+            },
+            "melting_temperature": 1000000.0,
+            "name": "Nitroglycerin Light",
+            "palette_coordinates": {
+                "category": "Other Materials",
+                "sub_category": "Nitroglycerin",
+                "sub_category_ordinal": 0
+            },
+            "sound_type": "Rubber",
+            "specific_heat": 21.0,
+            "stiffness": 1.0,
+            "strength": 0.1,
+            "texture_name": "rubber_1",
+            "thermal_conductivity": 0.25,
+            "water_diffusion_speed": 0.5,
+            "water_retention": 0.05,
+            "wind_receptivity": 0.1
+        },
+        {
+            "buoyancy_volume_fill": 1.0,
+            "color_key": "#E1E5B1",
+            "combustion_type": "Explosion",
+            "elasticity_coefficient": 0.5,
+	    "explodes_on_break": true,
+            "explosive_combustion_force": 4000.0,
+            "explosive_combustion_force_radius": 8.0,
+	    "explosive_combustion_heat": 150000.0,
+            "friction_kinetic_coefficient": 0.69,
+            "friction_static_coefficient": 1.25,
+            "ignition_temperature": 693.15,
+            "is_hull": false,
+            "mass": {
+                "density": 0.8,
+                "nominal_mass": 801.0
+            },
+            "melting_temperature": 1000000.0,
+            "name": "Nitroglycerin Strong",
+            "palette_coordinates": {
+                "category": "Other Materials",
+                "sub_category": "Nitroglycerin",
+                "sub_category_ordinal": 1
+            },
+            "sound_type": "Rubber",
+            "specific_heat": 21.0,
+            "stiffness": 1.0,
+            "strength": 0.1,
+            "texture_name": "rubber_1",
+            "thermal_conductivity": 0.25,
+            "water_diffusion_speed": 0.5,
+            "water_retention": 0.05,
+            "wind_receptivity": 0.1
+        },
+
         {
             "buoyancy_volume_fill": 1.0,
             "color_key": "#F5F5E9",
@@ -4376,8 +4445,8 @@
                         "name": "Other Materials",
                         "sub_categories": [
                             "Diesel",
-                            "Gunpowder Light",
-                            "Gunpowder Strong"
+                            "Gunpowder",
+                            "Nitroglycerin"
                         ]
                     }
                 ]
